Xors3dIndie(withSamples)_750/headers/CPP/inc/xors3d.h

// Object handle typedef
typedef int Handle;
X3DDECL void X3DCALL xEntityFX(Handle entity, int fx);
X3DDECL Handle X3DCALL xGetParent(Handle entity);
X3DDECL void X3DCALL xSetFrustumSphere(Handle entity, float x, float y, float z, float radii);
X3DDECL void X3DCALL xCalculateFrustumVolume(Handle entity);
X3DDECL void X3DCALL xEntityParent(Handle entity, Handle parent = NULL, bool isGlobal = true);
X3DDECL void X3DCALL xShowEntity(Handle entity);
X3DDECL void X3DCALL xHideEntity(Handle entity);
X3DDECL void X3DCALL xNameEntity(Handle entity, const char * name);
X3DDECL void X3DCALL xSetEntityQuaternion(Handle entity, Handle quaternion);
X3DDECL void X3DCALL xSetEntityMatrix(Handle entity, Handle matrix);
X3DDECL void X3DCALL xEntityAlpha(Handle entity, float alpha);
X3DDECL void X3DCALL xEntityColor(Handle entity, int red, int green, int blue);
X3DDECL void X3DCALL xEntitySpecularColor(Handle entity, int red, int green, int blue);
X3DDECL void X3DCALL xEntityAmbientColor(Handle entity, int red, int green, int blue);
X3DDECL void X3DCALL xEntityEmissiveColor(Handle entity, int red, int green, int blue);
X3DDECL void X3DCALL xEntityBlend(Handle entity, int mode);
X3DDECL void X3DCALL xEntityAlphaRef(Handle entity, int value);
X3DDECL void X3DCALL xEntityAlphaFunc(Handle entity, int value);
X3DDECL Handle X3DCALL xCreateInstance(Handle entity, Handle parent = NULL);
X3DDECL void X3DCALL xFreezeInstances(Handle entity, bool enable = true);
X3DDECL int X3DCALL xInstancingAvaliable();
X3DDECL Handle X3DCALL xGetEntityWorld(Handle entity);
X3DDECL void X3DCALL xSetEntityWorld(Handle entity, Handle world);
// entity_movement commands
X3DDECL void X3DCALL xScaleEntity(Handle entity, float x, float y, float z, bool isGlobal = false);
X3DDECL void X3DCALL xPositionEntity(Handle entity, float x, float y, float z, bool isGlobal = false);
X3DDECL void X3DCALL xMoveEntity(Handle entity, float x, float y, float z, bool isGlobal = false);
X3DDECL void X3DCALL xTranslateEntity(Handle entity, float x, float y, float z, bool isGlobal = false);
X3DDECL void X3DCALL xRotateEntity(Handle entity, float x, float y, float z, bool isGlobal = false);
X3DDECL void X3DCALL xTurnEntity(Handle entity, float x, float y, float z, bool isGlobal = false);
X3DDECL void X3DCALL xPointEntity(Handle entity1, Handle entity2, float roll = 0.0f);
X3DDECL void X3DCALL xAlignToVector(Handle entity, float x, float y, float z, int axis, float factor = 1.0f);
// entity_state commands
X3DDECL float X3DCALL xEntityDistance(Handle entity1, Handle entity2);
X3DDECL float X3DCALL xGetMatElement(Handle entity, int row, int col);
X3DDECL const char * X3DCALL xEntityClass(Handle entity);
X3DDECL Handle X3DCALL xGetEntityBrush(Handle entity);
X3DDECL float X3DCALL xEntityX(Handle entity, bool isGlobal = false);
X3DDECL float X3DCALL xEntityY(Handle entity, bool isGlobal = false);
X3DDECL float X3DCALL xEntityZ(Handle entity, bool isGlobal = false);
X3DDECL int X3DCALL xEntityVisible(Handle entity, Handle destination);
X3DDECL float X3DCALL xEntityScaleX(Handle entity);
X3DDECL float X3DCALL xEntityScaleY(Handle entity);
X3DDECL float X3DCALL xEntityScaleZ(Handle entity);
X3DDECL float X3DCALL xEntityRoll(Handle entity, bool isGlobal = false);
X3DDECL float X3DCALL xEntityYaw(Handle entity, bool isGlobal = false);
X3DDECL float X3DCALL xEntityPitch(Handle entity, bool isGlobal = false);
X3DDECL const char * X3DCALL xEntityName(Handle entity);
X3DDECL int X3DCALL xCountChildren(Handle entity);
X3DDECL Handle X3DCALL xGetChild(Handle entity, int index);
X3DDECL int X3DCALL xEntityInView(Handle entity, Handle camera);
X3DDECL Handle X3DCALL xFindChild(Handle entity, const char * name);
X3DDECL Handle X3DCALL xGetEntityMatrix(Handle entity);
X3DDECL float X3DCALL xGetEntityAlpha(Handle entity);
X3DDECL int X3DCALL xGetAlphaRef(Handle entity);
X3DDECL int X3DCALL xGetAlphaFunc(Handle entity);
X3DDECL int X3DCALL xEntityRed(Handle entity);
X3DDECL int X3DCALL xEntityGreen(Handle entity);
X3DDECL int X3DCALL xEntityBlue(Handle entity);
X3DDECL float X3DCALL xGetEntityShininess(Handle entity);
X3DDECL int X3DCALL xGetEntityBlend(Handle entity);
X3DDECL int X3DCALL xGetEntityFX(Handle entity);
X3DDECL int X3DCALL xEntityHidden(Handle entity);
X3DDECL int X3DCALL xEntitiesBBIntersect(Handle entity1, Handle entity2);
// filesystems commands
X3DDECL Handle X3DCALL xMountPackFile(const char * path, const char * mountpoint = "", const char * password = "");
X3DDECL void X3DCALL xUnmountPackFile(Handle packfile);
X3DDECL Handle X3DCALL xOpenFile(const char * path);
X3DDECL Handle X3DCALL xReadFile(const char * path);
X3DDECL Handle X3DCALL xWriteFile(const char * path);
X3DDECL void X3DCALL xCloseFile(Handle file);