Xors3dIndie(withSamples)_750/headers/C#/xors3d.cs


	public static void EntityTexture(int entity, int texture, int frame, int index)
	{
		 EntityTexture(entity, texture, frame, index, 1);
	}
	public static void EntityTexture(int entity, int texture, int frame)
	{
		 EntityTexture(entity, texture, frame, 0, 1);
	}
	public static void EntityTexture(int entity, int texture)
	{
		 EntityTexture(entity, texture, 0, 0, 1);
	}
	[DllImport("xors3d.dll", EntryPoint = "xEntityFX")]
	public static extern void EntityFX(int entity, int fx);

	[DllImport("xors3d.dll", EntryPoint = "xGetParent")]
	public static extern int GetParent(int entity);

	[DllImport("xors3d.dll", EntryPoint = "xSetFrustumSphere")]
	public static extern void SetFrustumSphere(int entity, float x, float y, float z, float radii);

	[DllImport("xors3d.dll", EntryPoint = "xCalculateFrustumVolume")]
	public static extern void CalculateFrustumVolume(int entity);

	[DllImport("xors3d.dll", EntryPoint = "xEntityParent")]
	public static extern void EntityParent(int entity, int parent, bool isGlobal);

	public static void EntityParent(int entity, int parent)
	{
		 EntityParent(entity, parent, true);
	}
	public static void EntityParent(int entity)
	{
		 EntityParent(entity, 0, true);
	}
	[DllImport("xors3d.dll", EntryPoint = "xShowEntity")]
	public static extern void ShowEntity(int entity);

	[DllImport("xors3d.dll", EntryPoint = "xHideEntity")]
	public static extern void HideEntity(int entity);

	[DllImport("xors3d.dll", EntryPoint = "xNameEntity")]
	public static extern void NameEntity_(int entity, StringBuilder name);
	public static void NameEntity(int entity, string name)
	{
		NameEntity_(entity, new StringBuilder(name));
	}
	[DllImport("xors3d.dll", EntryPoint = "xSetEntityQuaternion")]
	public static extern void SetEntityQuaternion(int entity, int quaternion);

	[DllImport("xors3d.dll", EntryPoint = "xSetEntityMatrix")]
	public static extern void SetEntityMatrix(int entity, int matrix);

	[DllImport("xors3d.dll", EntryPoint = "xEntityAlpha")]
	public static extern void EntityAlpha(int entity, float alpha);

	[DllImport("xors3d.dll", EntryPoint = "xEntityColor")]
	public static extern void EntityColor(int entity, int red, int green, int blue);

	[DllImport("xors3d.dll", EntryPoint = "xEntitySpecularColor")]
	public static extern void EntitySpecularColor(int entity, int red, int green, int blue);

	[DllImport("xors3d.dll", EntryPoint = "xEntityAmbientColor")]
	public static extern void EntityAmbientColor(int entity, int red, int green, int blue);

	[DllImport("xors3d.dll", EntryPoint = "xEntityEmissiveColor")]
	public static extern void EntityEmissiveColor(int entity, int red, int green, int blue);

	[DllImport("xors3d.dll", EntryPoint = "xEntityBlend")]
	public static extern void EntityBlend(int entity, int mode);

	[DllImport("xors3d.dll", EntryPoint = "xEntityAlphaRef")]
	public static extern void EntityAlphaRef(int entity, int value);

	[DllImport("xors3d.dll", EntryPoint = "xEntityAlphaFunc")]
	public static extern void EntityAlphaFunc(int entity, int value);

	[DllImport("xors3d.dll", EntryPoint = "xCreateInstance")]
	public static extern int CreateInstance(int entity, int parent);

	public static int CreateInstance(int entity)
	{
		return CreateInstance(entity, 0);
	}
	[DllImport("xors3d.dll", EntryPoint = "xFreezeInstances")]
	public static extern void FreezeInstances(int entity, bool enable);

	public static void FreezeInstances(int entity)
	{
		 FreezeInstances(entity, true);
	}
	[DllImport("xors3d.dll", EntryPoint = "xInstancingAvaliable")]
	public static extern int InstancingAvaliable();

	[DllImport("xors3d.dll", EntryPoint = "xGetEntityWorld")]
	public static extern int GetEntityWorld(int entity);

	[DllImport("xors3d.dll", EntryPoint = "xSetEntityWorld")]
	public static extern void SetEntityWorld(int entity, int world);


	// entity_movement commands
	[DllImport("xors3d.dll", EntryPoint = "xScaleEntity")]
	public static extern void ScaleEntity(int entity, float x, float y, float z, bool isGlobal);

	public static void ScaleEntity(int entity, float x, float y, float z)
	{
		 ScaleEntity(entity, x, y, z, false);
	}
	[DllImport("xors3d.dll", EntryPoint = "xPositionEntity")]
	public static extern void PositionEntity(int entity, float x, float y, float z, bool isGlobal);

	public static void PositionEntity(int entity, float x, float y, float z)
	{
		 PositionEntity(entity, x, y, z, false);
	}
	[DllImport("xors3d.dll", EntryPoint = "xMoveEntity")]
	public static extern void MoveEntity(int entity, float x, float y, float z, bool isGlobal);

	public static void MoveEntity(int entity, float x, float y, float z)
	{
		 MoveEntity(entity, x, y, z, false);
	}
	[DllImport("xors3d.dll", EntryPoint = "xTranslateEntity")]
	public static extern void TranslateEntity(int entity, float x, float y, float z, bool isGlobal);

	public static void TranslateEntity(int entity, float x, float y, float z)
	{
		 TranslateEntity(entity, x, y, z, false);
	}
	[DllImport("xors3d.dll", EntryPoint = "xRotateEntity")]
	public static extern void RotateEntity(int entity, float x, float y, float z, bool isGlobal);

	public static void RotateEntity(int entity, float x, float y, float z)
	{
		 RotateEntity(entity, x, y, z, false);
	}
	[DllImport("xors3d.dll", EntryPoint = "xTurnEntity")]
	public static extern void TurnEntity(int entity, float x, float y, float z, bool isGlobal);

	public static void TurnEntity(int entity, float x, float y, float z)
	{
		 TurnEntity(entity, x, y, z, false);
	}
	[DllImport("xors3d.dll", EntryPoint = "xPointEntity")]
	public static extern void PointEntity(int entity1, int entity2, float roll);

	public static void PointEntity(int entity1, int entity2)
	{
		 PointEntity(entity1, entity2, 0.0f);
	}
	[DllImport("xors3d.dll", EntryPoint = "xAlignToVector")]
	public static extern void AlignToVector(int entity, float x, float y, float z, int axis, float factor);

	public static void AlignToVector(int entity, float x, float y, float z, int axis)
	{
		 AlignToVector(entity, x, y, z, axis, 1.0f);
	}

	// entity_state commands
	[DllImport("xors3d.dll", EntryPoint = "xEntityDistance")]
	public static extern float EntityDistance(int entity1, int entity2);

	[DllImport("xors3d.dll", EntryPoint = "xGetMatElement")]
	public static extern float GetMatElement(int entity, int row, int col);

	[DllImport("xors3d.dll", EntryPoint = "xEntityClass")]
	public static extern IntPtr EntityClass_(int entity);
	public static string EntityClass(int entity)
	{
		return Marshal.PtrToStringAnsi(EntityClass_(entity));
	}

	[DllImport("xors3d.dll", EntryPoint = "xGetEntityBrush")]
	public static extern int GetEntityBrush(int entity);

	[DllImport("xors3d.dll", EntryPoint = "xEntityX")]
	public static extern float EntityX(int entity, bool isGlobal);

	public static float EntityX(int entity)
	{
		return EntityX(entity, false);
	}
	[DllImport("xors3d.dll", EntryPoint = "xEntityY")]
	public static extern float EntityY(int entity, bool isGlobal);

	public static float EntityY(int entity)
	{
		return EntityY(entity, false);
	}
	[DllImport("xors3d.dll", EntryPoint = "xEntityZ")]
	public static extern float EntityZ(int entity, bool isGlobal);

	public static float EntityZ(int entity)
	{
		return EntityZ(entity, false);
	}
	[DllImport("xors3d.dll", EntryPoint = "xEntityVisible")]
	public static extern int EntityVisible(int entity, int destination);

	[DllImport("xors3d.dll", EntryPoint = "xEntityScaleX")]
	public static extern float EntityScaleX(int entity);

	[DllImport("xors3d.dll", EntryPoint = "xEntityScaleY")]
	public static extern float EntityScaleY(int entity);

	[DllImport("xors3d.dll", EntryPoint = "xEntityScaleZ")]
	public static extern float EntityScaleZ(int entity);

	[DllImport("xors3d.dll", EntryPoint = "xEntityRoll")]
	public static extern float EntityRoll(int entity, bool isGlobal);

	public static float EntityRoll(int entity)
	{
		return EntityRoll(entity, false);
	}
	[DllImport("xors3d.dll", EntryPoint = "xEntityYaw")]
	public static extern float EntityYaw(int entity, bool isGlobal);

	public static float EntityYaw(int entity)
	{
		return EntityYaw(entity, false);
	}
	[DllImport("xors3d.dll", EntryPoint = "xEntityPitch")]
	public static extern float EntityPitch(int entity, bool isGlobal);

	public static float EntityPitch(int entity)
	{
		return EntityPitch(entity, false);
	}
	[DllImport("xors3d.dll", EntryPoint = "xEntityName")]
	public static extern IntPtr EntityName_(int entity);
	public static string EntityName(int entity)
	{
		return Marshal.PtrToStringAnsi(EntityName_(entity));
	}

	[DllImport("xors3d.dll", EntryPoint = "xCountChildren")]
	public static extern int CountChildren(int entity);

	[DllImport("xors3d.dll", EntryPoint = "xGetChild")]
	public static extern int GetChild(int entity, int index);

	[DllImport("xors3d.dll", EntryPoint = "xEntityInView")]
	public static extern int EntityInView(int entity, int camera);

	[DllImport("xors3d.dll", EntryPoint = "xFindChild")]
	public static extern int FindChild_(int entity, StringBuilder name);
	public static int FindChild(int entity, string name)
	{
		return FindChild_(entity, new StringBuilder(name));
	}
	[DllImport("xors3d.dll", EntryPoint = "xGetEntityMatrix")]
	public static extern int GetEntityMatrix(int entity);

	[DllImport("xors3d.dll", EntryPoint = "xGetEntityAlpha")]
	public static extern float GetEntityAlpha(int entity);

	[DllImport("xors3d.dll", EntryPoint = "xGetAlphaRef")]
	public static extern int GetAlphaRef(int entity);

	[DllImport("xors3d.dll", EntryPoint = "xGetAlphaFunc")]
	public static extern int GetAlphaFunc(int entity);

	[DllImport("xors3d.dll", EntryPoint = "xEntityRed")]
	public static extern int EntityRed(int entity);

	[DllImport("xors3d.dll", EntryPoint = "xEntityGreen")]
	public static extern int EntityGreen(int entity);

	[DllImport("xors3d.dll", EntryPoint = "xEntityBlue")]
	public static extern int EntityBlue(int entity);

	[DllImport("xors3d.dll", EntryPoint = "xGetEntityShininess")]
	public static extern float GetEntityShininess(int entity);

	[DllImport("xors3d.dll", EntryPoint = "xGetEntityBlend")]
	public static extern int GetEntityBlend(int entity);

	[DllImport("xors3d.dll", EntryPoint = "xGetEntityFX")]
	public static extern int GetEntityFX(int entity);

	[DllImport("xors3d.dll", EntryPoint = "xEntityHidden")]
	public static extern int EntityHidden(int entity);

	[DllImport("xors3d.dll", EntryPoint = "xEntitiesBBIntersect")]
	public static extern int EntitiesBBIntersect(int entity1, int entity2);


	// filesystems commands
	[DllImport("xors3d.dll", EntryPoint = "xMountPackFile")]
	public static extern int MountPackFile_(StringBuilder path, StringBuilder mountpoint, StringBuilder password);
	public static int MountPackFile(string path, string mountpoint, string password)
	{
		return MountPackFile_(new StringBuilder(path), new StringBuilder(mountpoint), new StringBuilder(password));
	}
	public static int MountPackFile(string path, string mountpoint)
	{
		return MountPackFile(path, mountpoint, "");
	}
	public static int MountPackFile(string path)
	{
		return MountPackFile(path, "", "");
	}
	[DllImport("xors3d.dll", EntryPoint = "xUnmountPackFile")]
	public static extern void UnmountPackFile(int packfile);

	[DllImport("xors3d.dll", EntryPoint = "xOpenFile")]
	public static extern int OpenFile_(StringBuilder path);
	public static int OpenFile(string path)
	{
		return OpenFile_(new StringBuilder(path));
	}
	[DllImport("xors3d.dll", EntryPoint = "xReadFile")]
	public static extern int ReadFile_(StringBuilder path);
	public static int ReadFile(string path)
	{
		return ReadFile_(new StringBuilder(path));
	}
	[DllImport("xors3d.dll", EntryPoint = "xWriteFile")]
	public static extern int WriteFile_(StringBuilder path);
	public static int WriteFile(string path)
	{
		return WriteFile_(new StringBuilder(path));
	}
	[DllImport("xors3d.dll", EntryPoint = "xCloseFile")]
	public static extern void CloseFile(int file);
